# lite-rehab-mvp

./: .gitignore  COMPONENTS.md  DEMO_GUIDE.md  FINAL_DEMO_RUNBOOK_ZH.md  README.md  README_zh.md  WIRING_GUIDE.md
docs/pitch/: literehab_one_page_pitch_copy.md
experiments/lite_benchmark/: MODEL_EXPERIMENT_SPEC.md  README.md  benchmark.py  requirements.txt
ios/: project.yml
ios/LiteRehab.xcodeproj/: project.pbxproj
ios/LiteRehabCore/: Package.swift
ios/LiteRehabTests/: APIClientTests.swift  CameraRetryPolicyTests.swift  ConnectionVaultTests.swift  LivePresentationModelsTests.swift  LiveStoreTests.swift  ReportPDFRendererTests.swift
maixcam2/: README.md  main.py
python/: prepare_public_imu.py  requirements.txt  run_dashboard.py  run_web_dashboard.py  train_multimodal.py
python/ecg/: pulse_and_change_monitor.c
receiver/main/: CMakeLists.txt  app_main.c  ecg_monitor.c  ecg_monitor.h  receiver_display.c  receiver_display.h  receiver_outputs.c  receiver_outputs.h  serial_telemetry.c  serial_telemetry.h
scripts/: build_all.sh  common.sh  demo_doctor.sh  flash_receiver.sh  flash_wearable.sh  start_ios_demo.sh  start_maixcam2_demo.sh  start_web_demo.sh  test_all.sh
shared/: ecg_alert_gate.c  ecg_alert_gate.h  ecg_lead_filter.c  ecg_lead_filter.h  ecg_logic.c  ecg_logic.h  feedback_logic.c  feedback_logic.h  motion_logic.c
tests/: run_host_tests.sh  test_ecg_alert_gate.c  test_ecg_lead_filter.c  test_ecg_logic.c  test_feedback_logic.c  test_motion_logic.c  test_scripts.sh
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+164 files in other folders)
